# pump-fun-smart-contract

./: .env  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Anchor.toml  Cargo.toml  README.adoc  README.md  package.json  testKeypair.json
cli/: command.ts  scripts.ts
keys/: DEViQuEF1E8hjCVVSntRhaf95ajGufEW2hB5u4V9NSZe.json
keys/programs/: wenBqrmxFAvovtz2jVRyNKjQQWzFF23Qv5oz3PSvDEW.json
lib/: constant.ts  scripts.ts  util.ts
programs/pump/: Cargo.toml
programs/pump/src/: lib.rs  state.rs
programs/pump/src/instructions/: add_liquidity.rs  remove_liquidity.rs  swap.rs
programs/pumpfun/: Cargo.toml
programs/pumpfun/keys/: wen_dev_program-keypair.json
programs/pumpfun/src/: amm_instruction.rs  constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/pumpfun/src/instructions/: accept_authority.rs  configure.rs  launch.rs  migrate.rs  mod.rs  nominate_authority.rs  simulate_swap.rs  swap.rs  withdraw.rs
tests/: anchor-tests-runner.sh  constant.ts  pump.ts  pumpfun.ts  utils.ts
